[workspace]
resolver = "2"
members = [
    "tac-operation-lifecycle-logic",
    "tac-operation-lifecycle-entity",
    "tac-operation-lifecycle-migration",
    "tac-operation-lifecycle-proto",
    "tac-operation-lifecycle-server",
    "env-docs-generation",
]

[workspace.dependencies]
blockscout-service-launcher = "0.19.0"
sea-orm = "1.1.10"
sea-orm-migration = "1.1.10"
anyhow = "1.0"
blockscout-display-bytes = "1.0"
tracing = "0.1"
reqwest = "0.12"
serde = "1.0"
serde_with = "3.6.1"
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3.6"
tokio = "1.23"
chrono = "0.4.39"
tracing-subscriber = "0.3"
tower = "0.5.2"
uuid = "1.7.0"
pretty_assertions = "1.3"
async-std = "1"
actix-web = "4"
prost = "0.13.5"
prost-build = "0.13.5"
tonic = "0.12.3"
tonic-build = "0.12.3"
async-trait = "0.1"
config = "0.15.11"
wiremock = "0.6"
rand = "0.9.0"