[workspace]
resolver = "2"
members = [
    "env-docs-generation",
    "tac-operation-lifecycle-entity",
    "tac-operation-lifecycle-logic",
    "tac-operation-lifecycle-migration",
    "tac-operation-lifecycle-proto",
    "tac-operation-lifecycle-server",
]

[workspace.dependencies]
actix-web = "4"
anyhow = "1.0"
async-std = "1"
async-stream = "0.3.6"
async-trait = "0.1"
blockscout-display-bytes = "1.0"
blockscout-service-launcher = "0.19.0"
chrono = "0.4.39"
config = "0.15.11"
futures = "0.3"
pretty_assertions = "1.3"
prost = "0.13.5"
prost-build = "0.13.5"
rand = "0.9.0"
reqwest = "0.12"
rstest = "0.25"
sea-orm = "1.1.10"
sea-orm-migration = "1.1.10"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.6.1"
tokio = "1.23"
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.7.0"
wiremock = "0.6"
