[package]
name = "verification"
version = "0.1.0"
# authors = [""]
edition = "2021"
repository = "https://github.com/blockscout/blockscout-rs/verification"

[dependencies]
actix-web = "4"
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1"
log = "0.4"
env_logger = "0.9"
semver = "1.0"
config = "0.13"
reqwest = { version = "0.11", features = ["json"] }

