[package]
name = "basic-cache-logic"
version = "0.1.0"
edition = "2021"


[dependencies]
basic-cache-entity = { path = "../basic-cache-entity" }
basic-cache-proto = { path = "../basic-cache-proto" }
anyhow = "1.0"
blockscout-display-bytes = "1.0"
tracing = "0.1"
trait-variant = "0.1.2"
url = "2.4"

sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array",
] }


## Uncomment this if needed
#ethabi = "18.0"
ethers-core = "2.0.0"
#futures = "0.3"
#hex = "0.4"
#keccak-hash = "0.10.0"
#lazy_static = "1"
#mismatch = "1.0"
#prometheus = "0.13"
#reqwest = "0.11.18"
#semver = "1.0"
#serde = "1.0"
#serde_json = "1.0"
thiserror = "1.0"
#tokio = "1.22"
#tonic = { version = "0.8", features = ["tls-roots"] }
#tracing-subscriber = { version = "0.3", features = ["env-filter"]}

[dev-dependencies]
blockscout-service-launcher = { version = "0.9.0", features = [ "test-database", "database-0_12" ] }
pretty_assertions = "1.3"
basic-cache-migration = {path = "../basic-cache-migration"}
