[package]
name = "basic-cache-server"
version = "0.1.0"
edition = "2021"


[dependencies]
basic-cache-proto = { path = "../basic-cache-proto" }
basic-cache-logic = { path = "../basic-cache-logic" }
actix-web = "4.2"
anyhow = "1.0"
async-trait = "0.1"
blockscout-service-launcher = { workspace = true, features = ["database-0_12" ] }
config = "0.14"
sea-orm = "0.12.2"
serde = "1.0"
serde_json = "1.0.96"
tokio = { version = "1.23", features = [ "rt-multi-thread", "macros" ] }
tonic = "0.8"
tracing = "0.1"

# # Uncomment if needed
# ethers = "2.0.0"
# blockscout-display-bytes = "1.0"
# serde_with = "2.1"


[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = [ "test-server","test-database"] }
pretty_assertions = "1.3"
reqwest = { version = "0.12", features = ["json"]}
# # Uncomment if needed
# mockall = "0.11"
# bytes = "1.5.0"
# hex = "0.4.3"
# rand = "0.8"
# rstest = "0.18.2"
# sea-orm = { version = "*", features = [ "sqlx-sqlite" ]}
# tokio-stream = { version = "0.1", features = ["net"] }
