[package]
name = "bens-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = [ "rt-multi-thread", "macros" ] }
anyhow = "1"
ethers = "2"
hex = "0.4"
chrono = "0.4"
thiserror = "1"
serde = "1"
serde_json = "1"

[dependencies.sqlx]
version = "0.7"
features = [
  "bigdecimal", 
  "postgres", 
  "runtime-async-std", 
  "tls-rustls",
  "migrate",
]

[dev-dependencies]
pretty_assertions = "1.4.0"
