[package]
name = "bens-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = [ "rt-multi-thread", "macros" ] }
anyhow = "1"
ethers = "2"
hex = "0.4"
chrono = "0.4"
tera = "1.19"
thiserror = "1"
serde = "1"
serde_json = {version = "1", features = ["raw_value"]}
url = "2.4"
reqwest = "0.11"
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
lazy_static = "1.4"
tracing = "0.1"
futures = "0.3"
cached = { version = "0.46.1", features = ["proc_macro", "tokio", "async", "async_tokio_rt_multi_thread"] }
wiremock = {version = "0.5", optional = true }

[dependencies.sqlx]
version = "0.7"
features = [
  "bigdecimal", 
  "postgres", 
  "runtime-tokio", 
  "tls-rustls",
  "migrate",
  "chrono"
]

[dev-dependencies]
pretty_assertions = "1.4.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[[example]]
name = "resolve_benchmark"

[features]
default = []
test-utils = ["dep:wiremock"]
