[package]
name = "bens-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true, features = ["full"] }
alloy-ccip-read = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bigdecimal = { workspace = true }
cached = { workspace = true, features = [
  "proc_macro",
  "tokio",
  "async",
  "async_tokio_rt_multi_thread",
] }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
idna = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
nonempty = { workspace = true, features = ["serde", "serialize"] }
prometheus = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { workspace = true, features = [
  "bigdecimal",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "migrate",
  "chrono",
  "macros",
] }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "resolve_benchmark"

[features]
default = []
test-utils = ["dep:wiremock"]
