[package]
name = "bens-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-prost =  { workspace = true }
actix-prost-macros =  { workspace = true }
actix-web =  { workspace = true }
prost =  { workspace = true }
serde =  { workspace = true }
serde_with =  { workspace = true }
tonic =  { workspace = true }

[build-dependencies]
actix-prost-build =  { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true}
