[package]
name = "bens-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bens-proto = { path = "../bens-proto" }
bens-logic = { path = "../bens-logic" }

actix-web = "4.2"
anyhow = "1.0"
blockscout-display-bytes = "1.0"
blockscout-service-launcher = { version = "0.9.0", features = [ "database-0_12" ] }
config = "0.13"
ethers = "2.0.0"
serde = "1.0"
serde_json = "1.0.96"
tokio = { version = "1.23", features = [ "rt-multi-thread", "macros" ] }
tonic = "0.8"
tracing = "0.1"
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
hex = "0.4"
thiserror = "1"
chrono = "0.4"

[dependencies.sqlx]
version = "0.7"
features = [ 
  "postgres", 
  "runtime-tokio", 
  "tls-rustls",
]


[dev-dependencies]
bens-logic = { path = "../bens-logic", features = ["test-utils"] }
blockscout-service-launcher = { version = "0.9.0", features = [ "database-0_12", "test-server" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pretty_assertions = "1.4.0"
