[package]
name = "bens-server"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
bens-logic = { workspace = true }
bens-proto = { workspace = true }
blockscout-display-bytes = { workspace = true }
blockscout-service-launcher = { workspace = true, features = ["database-1_0"] }
chrono = { workspace = true }
config = { workspace = true }
env-collector = { workspace = true }
hex = { workspace = true }
nonempty = { workspace = true, features = ["serde", "serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, default-features = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
bens-logic = { workspace = true, features = ["test-utils"] }
blockscout-service-launcher = { workspace = true, features = [
    "database-1_0",
    "test-server",
] }
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
tera = { workspace = true }
