[package]
name = "da-indexer-logic"
version = "0.1.0"
edition = "2021"


[dependencies]
da-indexer-entity = { path = "../da-indexer-entity" }
anyhow = "1.0"
blockscout-display-bytes = "1.0"
tracing = "0.1"

sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array",
] }

celestia-rpc = "0.1.1"
celestia-types = "0.1.1"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
lazy_static = "1.4.0"
sha3 = "0.10.8"
futures = "0.3"
jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }
serde = "1.0"
serde_with = "3.6.1"
async-trait = "0.1"
http = "0.2.9"
tonic = { version = "0.7", features = ["tls", "tls-roots"] }
prost = "0.10"
ethabi = "18.0"
ethers = { version = "2.0.11", features = ["ws"] }

[dev-dependencies]
blockscout-service-launcher = { version = "0.9.0", features = ["test-database", "database-0_12"] }
pretty_assertions = "1.3"
da-indexer-migration = {path = "../da-indexer-migration"}
serde_json = "1.0"
base64 = "0.22.0"

[build-dependencies]
tonic-build = "0.7"
