[package]
name = "da-indexer-logic"
version = "0.1.0"
edition = "2021"


[dependencies]
da-indexer-entity = { path = "../da-indexer-entity" }
anyhow = "1.0"
blockscout-display-bytes = "1.0"
tracing = "0.1"

sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array",
] }

celestia-rpc = "0.7.0"
celestia-types = "0.7.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
lazy_static = "1.4.0"
sha3 = "0.10.8"
futures = "0.3"
jsonrpsee = { version = "0.24.7", features = ["client-core", "macros"] }
serde = "1.0"
serde_with = "3.6.1"
serde_json = "1.0.96"
async-trait = "0.1"
http = "1.1.0"
tonic = { version = "0.7", features = ["tls", "tls-roots"] }
prost = "0.10"
ethabi = "18.0"
ethers = { version = "2.0.11", features = ["ws"] }
reqwest = { version = "0.12.5", features = ["json"] }
chrono = "0.4"
toml = "0.8.14"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"

[dev-dependencies]
blockscout-service-launcher = { version = "0.9.0", features = ["test-database", "database-0_12"] }
pretty_assertions = "1.3"
da-indexer-migration = {path = "../da-indexer-migration"}
serde_json = "1.0"
wiremock = "0.6"
toml = "0.8.14"
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.7"
