[package]
name = "da-indexer-logic"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blockscout-display-bytes = { workspace = true }
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
chrono = { workspace = true }
da-indexer-entity = { workspace = true }
ethabi = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true }
lazy_static = { workspace = true }
md5 = { workspace = true }
minio = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = ["test-database"] }
da-indexer-migration = { workspace = true }
serde_json = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
